test/syntax_errs/breaking.js
// breaking.js
thing broken;

module.exports = {};
